# bauplan-mcp-server

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  entrypoint.sh  main.py  mise.toml  pyproject.toml
.github/workflows/: build.yml  check.yml  zizmor.yml
bauplan_reference/: cli.md
mcp_bauplan/: CLAUDE.md  MCP_CONSTANTS.py  __init__.py  app.py
mcp_bauplan/auth/: __init__.py  api_key_oauth.py  config.py
mcp_bauplan/auth/templates/: _styles.css  authorize_complete.html  authorize_form.html
mcp_bauplan/tools/: __init__.py  _guards.py  _schema.py  apply_table_creation_plan.py  cancel_job.py  code_run.py  create_branch.py  create_client.py  create_namespace.py  create_table.py  create_tag.py  delete_branch.py  delete_namespace.py  delete_table.py  delete_tag.py  get_branch.py  get_branches.py  get_commits.py  get_instructions.py  get_job.py  get_job_logs.py  get_jobs.py  get_namespace.py  get_namespaces.py  get_schema.py  get_table.py  get_tables.py  get_tag.py  get_tags.py  get_user_info.py  has_branch.py  has_namespace.py  has_table.py  has_tag.py  import_data.py  list_jobs.py  list_tables.py  merge_branch.py  plan_table_creation.py  project_run.py  (+5 more)
mcp_bauplan/tools/instructions/: data.md  ingest.md  pipeline.md  repair.md  sdk.md  test.md  wap.md
scripts/: generate-config.py
skills/data-assessment/: SKILL.md
skills/data-pipeline/: SKILL.md
skills/data-quality-checks/: SKILL.md  ingestion_validation.py  pipeline-expecations.py  pipeline-expectations.py
skills/debug-and-fix-pipeline/: SKILL.md
skills/explore-data/: SKILL.md
skills/new-pipeline/: SKILL.md  examples.md
skills/quality-gated-updates/: SKILL.md
skills/root-cause-analysis-and-fix/: SKILL.md
skills/safe-ingestion/: SKILL.md
skills/wap/: SKILL.md  wap_template.py
tests/: __init__.py  conftest.py  test_api_key_oauth.py  test_app.py  test_auth_config.py  test_bauplan_sdk_compat.py  test_create_client.py  test_skills.py  test_wap_skill.py
