[project]
name = "mcp-bauplan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
  "fastmcp~=3.4.2",
  "uvicorn[standard]~=0.49.0",
  "bauplan>=0.1.14,<0.2.0",
  "pydantic~=2.13.4",
  "authlib~=1.7.2",
  "joserfc~=1.7.0",
  "cryptography~=49.0.0",
]

[project.optional-dependencies]
otel = [
  "opentelemetry-distro==0.63b1",
  "opentelemetry-exporter-otlp==1.42.1",
  "opentelemetry-instrumentation-fastapi==0.63b1",
  "opentelemetry-instrumentation-starlette==0.63b1",
  "opentelemetry-instrumentation-logging==0.63b1",
  "opentelemetry-instrumentation-asyncio==0.63b1",
  "opentelemetry-instrumentation-requests==0.63b1",
  "opentelemetry-instrumentation-urllib3==0.63b1",
  "opentelemetry-instrumentation-grpc==0.63b1",
  "opentelemetry-instrumentation-mcp~=0.61.0",
]

[project.scripts]
mcp-bauplan = "mcp_bauplan.app:main"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
  "pytest~=9.1.0",
  "watchdog[watchmedo]~=6.0.0",
]

[tool.setuptools.packages.find]
include = ["mcp_bauplan*"]

[tool.setuptools.package-data]
"mcp_bauplan.tools" = ["instructions/*.md"]

[tool.ruff]
fix = true
line-length = 110
exclude = [".venv"]

[tool.ruff.lint]
select = [
  "F",   # Pyflakes
  "E",   # pycodestyle error
  "W",   # pycodestyle warning
  "I",   # isort
  "B",   # flake8-bugbear
  "RUF", # Ruff-specific rules
]
ignore = [
  "E501", # Line too long -- handled by ruff format; only docstrings/comments exceed the limit
  "B008", # Do not perform function call in argument defaults -- required by FastMCP Depends()
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
